--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,9 +4,11 @@
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
+    <color name="green">#20B805</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="orange">#FFBB3B</color>
+    <color name="orange_pressed">#FFE8BD</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray_input">#212121</color>
     <color name="gray_border">#707070</color>
