--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,7 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/navHomeFragment">
+    app:startDestination="@id/loginFragment">
     <fragment
         android:id="@+id/navHomeFragment"
         android:name="com.example.breakingBad.ui.navHome.NavHomeFragment"
