--- a/app/src/main/res/layout/saved_character_item.xml
+++ b/app/src/main/res/layout/saved_character_item.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
-        android:id="@+id/charItemView"
+        android:id="@+id/savedCharItemView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:scaleType="center"
@@ -18,14 +17,14 @@
         android:contentDescription="@string/img_description" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/charNameTxtView"
+        android:id="@+id/savedCharNameTxtView"
         style="@style/Action_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/std_vertical_margin_half"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/charItemView"
+        app:layout_constraintTop_toBottomOf="@+id/savedCharItemView"
         tools:text="name" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
