--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,11 +2,11 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/loginFragment">
+    app:startDestination="@id/navHomeFragment">
     <fragment
         android:id="@+id/navHomeFragment"
         android:name="com.example.breakingBad.ui.navHome.NavHomeFragment"
-        android:label="RegistrationFragment" />
+        android:label="Home" />
 
     <fragment
         android:id="@+id/registrationFragment"
@@ -25,6 +25,7 @@
         android:id="@+id/loginFragment"
         android:name="com.example.breakingBad.ui.login.LoginFragment"
         android:label="LoginFragment">
+
         <action
             android:id="@+id/form_login_to_registration"
             app:destination="@id/registrationFragment"
@@ -34,22 +35,18 @@
             app:popExitAnim="@anim/slide_out_left" />
     </fragment>
 
+
     <fragment
         android:id="@+id/characterDetailsFragment"
         android:name="com.example.breakingBad.ui.cardDetails.CharacterDetailsFragment"
-        android:label="CharacterDetailsFragment" />
+        android:label="CardDetailsFragment">
+        <argument
+            android:name="data"
+            app:argType="com.example.breakingBad.data.models.character.Character" />
+    </fragment>
 
     <action
-        android:id="@+id/showCharacterDetails"
-        app:destination="@id/characterDetailsFragment"
-        app:enterAnim="@anim/slide_in_right"
-        app:exitAnim="@anim/slide_out_right"
-        app:popEnterAnim="@anim/slide_in_left"
-        app:popExitAnim="@anim/slide_out_left">
-        <argument
-            android:name="DATA"
-            app:argType="com.example.breakingBad.data.models.character.Character" />
-
-    </action>
+        android:id="@+id/action_global_characterDetailsFragment"
+        app:destination="@id/characterDetailsFragment"/>
 
 </navigation>
