--- a/app/src/main/res/layout/saved_character_item.xml
+++ b/app/src/main/res/layout/saved_character_item.xml
@@ -1,30 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:background="@color/black">
 
     <ImageView
         android:id="@+id/savedCharItemView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="179dp"
+        android:layout_height="265dp"
+        android:contentDescription="@string/img_description"
         android:scaleType="center"
-        app:layout_constraintDimensionRatio="W,265:179"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/img_description" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/savedCharNameTxtView"
+        android:id="@+id/savedCharacterNameTextView"
         style="@style/Action_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/std_vertical_margin_half"
+        android:layout_marginStart="@dimen/saved_char_horizon_margin"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/savedCharItemView"
-        tools:text="name" />
+        app:layout_constraintStart_toEndOf="@id/savedCharItemView"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="NAME" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/savedCharacterNickNameTextView"
+        style="@style/Action_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/saved_char_horizon_margin"
+        android:layout_marginTop="1dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/savedCharItemView"
+        app:layout_constraintTop_toBottomOf="@+id/savedCharacterNameTextView"
+        tools:text="NICKNAME" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/savedCharacterPortrayedTextView"
+        style="@style/Text_Portrayed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/saved_char_horizon_margin"
+        android:layout_marginTop="1dp"
+        android:gravity="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/savedCharItemView"
+        app:layout_constraintTop_toBottomOf="@+id/savedCharacterNickNameTextView"
+        tools:text="By\nName Surname" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
