--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -33,7 +33,7 @@
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/userNameInput"
         style="@style/Edit_Text"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="250dp"
         android:hint="@string/username_here"
         app:layout_constraintBottom_toTopOf="@+id/passwordInput"
         app:layout_constraintEnd_toStartOf="@+id/gdEnd"
@@ -56,8 +56,8 @@
         android:id="@+id/passwordInput"
         style="@style/Edit_Text"
         android:layout_marginTop="44dp"
-        android:inputType="textPassword"
         android:hint="@string/password_here"
+        android:inputType="textPassword"
         app:layout_constraintEnd_toStartOf="@+id/gdEnd"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/gdStart"
@@ -103,7 +103,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_end="@dimen/screen_inset_top" />
+        app:layout_constraintGuide_begin="20dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
