--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,8 +19,13 @@
     <dimen name="character_horizontal_spacing_home">10dp</dimen>
     <dimen name="character_horizontal_spacing_search">0dp</dimen>
     <dimen name="character_vertical_space">13dp</dimen>
+    <dimen name="saved_character_margin_start">25dp</dimen>
+    <dimen name="saved_character_margin_end">51dp</dimen>
+    <dimen name="saved_character_margin_top">50dp</dimen>
+    <dimen name="saved_character_margin_bot">250dp</dimen>
     <dimen name="bottom_top_fragment_space">60dp</dimen>
     <dimen name="home_nav_bar_height">70dp</dimen>
     <dimen name="search_bar_padding">15dp</dimen>
     <dimen name="search_bar_height">51dp</dimen>
+    <dimen name="saved_char_horizon_margin">50dp</dimen>
 </resources>
