--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -56,6 +56,12 @@
         <item name="android:textSize">14sp</item>
     </style>
 
+    <style name="Text_Season" parent="TextAppearance.AppCompat.Body1">
+        <item name="android:textColor">@color/season_episode_name</item>
+        <item name="fontFamily">@font/gotham_medium</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+
     <style name="Text_Title" parent="TextAppearance.AppCompat.Body1">
         <item name="android:textColor">@color/white</item>
         <item name="fontFamily">@font/gotham_medium</item>
@@ -111,5 +117,23 @@
         <item name="android:textAlignment">textStart</item>
         <item name="android:drawableLeft">@drawable/ic_logout_2</item>
         <item name="android:drawablePadding">20dp</item>
+    </style>
+
+    <style name="Text_Portrayed">
+        <item name="android:fontFamily">@font/gotham_book</item>
+        <item name="android:textColor">@color/quote_text_color</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+
+    <style name="AlertDialogStyle" parent="Theme.AppCompat.Light.Dialog">
+        <item name="android:colorBackground">@color/gray_input</item>
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:colorAccent">@color/orange</item>
+    </style>
+
+    <style name="Episode_Num_Text">
+        <item name="android:fontFamily">@font/gotham_book</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:textColor">@color/season_episode_name</item>
     </style>
 </resources>
