BB_Ver_06_04_2021_loginRepPatternChangeStartEpisodeDetail

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -49,7 +49,7 @@
 
     <fragment
         android:id="@+id/characterDetailsFragment"
-        android:name="com.example.breakingBad.ui.cardDetails.CharacterDetailsFragment"
+        android:name="com.example.breakingBad.ui.characterDetails.CharacterDetailsFragment"
         android:label="CardDetailsFragment">
         <argument
             android:name="character"
