--- a/app/src/main/res/layout/season_episode_item.xml
+++ b/app/src/main/res/layout/season_episode_item.xml
@@ -11,12 +11,12 @@
         android:id="@+id/episodeItemView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/img_description"
-        android:layout_marginTop="@dimen/std_vertical_margin_half"
         android:layout_marginStart="@dimen/std_screen_insets"
+        android:layout_marginTop="@dimen/std_vertical_margin_half"
+        android:background="@drawable/season_pilot"
+        android:contentDescription="@string/img_description"
         android:scaleType="center"
         app:layout_constraintStart_toStartOf="parent"
-        android:background="@drawable/season_pilot"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -27,6 +27,7 @@
         android:layout_marginStart="@dimen/std_screen_insets"
         android:layout_marginTop="@dimen/std_plus_screen_insets"
         android:ellipsize="end"
+        android:maxLines="1"
         app:layout_constraintStart_toEndOf="@id/episodeItemView"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="NAME" />
@@ -38,10 +39,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:ellipsize="end"
+        android:maxLines="1"
         app:layout_constraintStart_toEndOf="@id/episodeItemView"
         app:layout_constraintTop_toBottomOf="@+id/episodeNameTextView"
-        tools:layout_editor_absoluteY="47dp"
         tools:text="NAME" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
