--- a/app/src/main/res/layout/episode_detail_screen.xml
+++ b/app/src/main/res/layout/episode_detail_screen.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:id="@+id/episodeItemImgView"
         android:layout_width="match_parent"
-        android:layout_height="260dp"
+        android:layout_height="250dp"
         android:contentDescription="@string/img_description"
         android:scaleType="center"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,9 +30,9 @@
 
     <ImageView
         android:id="@+id/episodeItemLogoView"
-        android:layout_width="70dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="@dimen/std_plus_screen_insets"
+        android:layout_width="80dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="@dimen/std_screen_insets"
         android:layout_marginEnd="15dp"
         android:contentDescription="@string/img_description"
         android:scaleType="center"
