--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -69,7 +69,7 @@
         android:layout_height="45dp"
         android:layout_marginTop="24dp"
         android:text="@string/button_text"
-        app:layout_constraintBottom_toTopOf="@+id/gdBot"
+        app:layout_constraintBottom_toTopOf="@+id/haveAccView"
         app:layout_constraintEnd_toStartOf="@+id/gdEnd"
         app:layout_constraintStart_toStartOf="@id/gdStart"
         app:layout_constraintTop_toBottomOf="@+id/passwordInput" />
@@ -83,7 +83,7 @@
         android:textAppearance="@style/login_screen_have_acc"
         app:layout_constraintEnd_toStartOf="@+id/gdEnd"
         app:layout_constraintStart_toStartOf="@+id/gdStart"
-        app:layout_constraintTop_toBottomOf="@+id/gdBot" />
+        app:layout_constraintTop_toBottomOf="@+id/loginButton" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/registerBtnLogin"
@@ -103,13 +103,6 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="20dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/gdBot"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.6" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
