--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -25,6 +25,7 @@
         android:id="@+id/userNameActionText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
         android:text="@string/username_text"
         android:textAppearance="@style/Action_text"
         app:layout_constraintBottom_toTopOf="@+id/userNameInput"
@@ -45,6 +46,7 @@
         android:id="@+id/passwordActionText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
         android:text="@string/password_text"
         android:textAppearance="@style/Action_text"
         app:layout_constraintBottom_toTopOf="@+id/passwordInput"
