--- a/app/src/main/res/layout/registration_screen.xml
+++ b/app/src/main/res/layout/registration_screen.xml
@@ -22,6 +22,7 @@
         android:id="@+id/userNameFirstActionText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
         android:layout_gravity="start"
         android:gravity="center"
         android:text="@string/registration_username"
@@ -45,6 +46,7 @@
         android:id="@+id/userNameSecondActionText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
         android:layout_gravity="start"
         android:gravity="center"
         android:text="@string/registration_username"
@@ -69,6 +71,7 @@
         android:id="@+id/passwordFirstActionText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
         android:layout_gravity="start"
         android:gravity="center"
         android:text="@string/registration_password"
@@ -94,6 +97,7 @@
         android:id="@+id/passwordSecondActionText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
         android:layout_gravity="start"
         android:gravity="center"
         android:text="@string/repeat_password"
